Change api group to openviz.dev
